<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_user_profile"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:gravity="center"
        android:background="@drawable/rounded_rectangle_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#4287f5"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/edt_txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:drawablePadding="20dp"
            android:background="@drawable/rounded_rectangle_grey"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:autofillHints="abc@email.com"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edt_txt_login_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:drawablePadding="20dp"
            android:background="@drawable/rounded_rectangle_grey"
            android:drawableStart="@drawable/ic_key"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:autofillHints="ki@45Tial"
            android:hint="@string/password" />

        <CheckBox
            android:id="@+id/checkbox_login_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/show_password"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"/>

            <TextView
                android:id="@+id/txt_view_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4287f5"
                android:text="@string/register"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
