<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background_user_profile"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:background="@drawable/rounded_rectangle_white"
            android:elevation="4dp">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#4287f5"
                android:paddingVertical="10dp"
                android:text="@string/register"/>

            <!-- Name -->
            <EditText
                android:id="@+id/edt_txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/rounded_rectangle_grey"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:hint="@string/name"/>

            <!-- Email -->
            <EditText
                android:id="@+id/edt_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/rounded_rectangle_grey"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:hint="@string/email"/>

            <!-- Age -->
            <EditText
                android:id="@+id/edt_txt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/rounded_rectangle_grey"
                android:drawableStart="@drawable/ic_numbers"
                android:drawablePadding="5dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:hint="@string/age"/>

            <!-- Gender Section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_rectangle_grey" >

                <!-- Icon for Spinner -->
                <ImageView
                    android:id="@+id/spinner_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_supervisor_account" />

                <!-- Gender Spinner -->
                <Spinner
                    android:id="@+id/spin_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_toEndOf="@id/spinner_icon" />
            </RelativeLayout>

            <!-- Password -->
            <EditText
                android:id="@+id/edt_txt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/rounded_rectangle_grey"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:hint="@string/password"/>

            <!-- Show Password Checkbox -->
            <CheckBox
                android:id="@+id/checkbox_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/show_password"/>

            <!-- Register Button -->
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/register"/>

            <!-- Already a Member? Login -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/already_a_member"/>

                <TextView
                    android:id="@+id/txt_view_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4287f5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/login"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
